# Vertex3D

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/assets/materials/shaders/base/: default.frag  default.vert
src/libraries/: stb.cpp
src/libraries/classes/: Camera.cpp  Camera.h
src/libraries/engine/: Timer.cpp  Timer.h
src/libraries/shaders/: ElementBufferObject.cpp  ElementBufferObject.h  Shader.cpp  Shader.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
src/libraries/visual/: Texture.cpp  Texture.h
src/scripts/engine/main/: EngineCore.cpp  EngineCore.h
src/scripts/engine/sdl/: SDLWindow.cpp  SDLWindow.h
src/scripts/engine/util/debug/: Debug.cpp  Debug.h
src/scripts/engine/util/signals/: VSignal.h
src/scripts/include/engine/: CMakeLists.txt
src/scripts/include/engine/common/: Debug.h
src/scripts/include/engine/core/: Engine.h
src/scripts/include/engine/rendering/: GL.h  Window.h
src/scripts/source/engine/: CMakeLists.txt
src/scripts/source/engine/core/: Engine.cpp
src/scripts/source/engine/rendering/: Renderer.cpp  Window.cpp
src/shaders/: default.vert
